# message-queue

./: README.md  app.py  dashboard_api.py  pyproject.toml  requirements.txt
message_queue/: __init__.py  core.py  utils.py  watcher.py
templates/: dashboard.html
